# libewf-legacy

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  autogen.ps1  configure.ac  libewf-legacy.ini  libewf.nuspec  libewf.pc.in  libewf.spec.in  pyproject.toml.in  runtests.sh  setup.cfg.in  setup.py  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  synctestdata.ps1  synctestdata.sh  tox.ini
.travis/: before_install.sh  runtests.sh
common/: config_winapi.h
documents/: Makefile.am
dpkg/: control
ewf.net/: ewf.net.rc.in  ewf.net_datetime.cpp  ewf.net_datetime.h  ewf.net_definitions.h  ewf.net_file_entry.cpp  ewf.net_file_entry.h  ewf.net_handle.cpp  ewf.net_handle.h  ewf.net_sector_range.cpp  ewf.net_sector_range.h  ewf.net_support.cpp  ewf.net_support.h
ewftools/: Makefile.am  byte_size_string.c  byte_size_string.h  device_handle.c  device_handle.h  digest_hash.c  digest_hash.h  ewfacquire.c  ewfacquirestream.c  ewfcommon.h  ewfdebug.c  ewfexport.c  ewfinfo.c  ewfinput.c  ewfinput.h  ewfmount.c  ewfrecover.c  ewftools_libcsplit.h  ewftools_libodraw.h  ewftools_libsmdev.h  ewftools_libsmraw.h  ewftools_output.c  ewftools_system_string.c  ewfverify.c  export_handle.c  export_handle.h  guid.c  guid.h  imaging_handle.c  imaging_handle.h  info_handle.c  info_handle.h  log_handle.c  log_handle.h  mount_dokan.c  mount_dokan.h  mount_file_entry.c  mount_file_system.c  mount_file_system.h  mount_fuse.c  (+10 more)
ewftools-mt/: Makefile.am  ewfacquirestream  ewfacquirestream.c  fifo_queue.cpp  fifo_queue.hpp  threading.cpp  threading.hpp  threading_test.cpp
examples/: Makefile.am
include/: libewf.h.in
libewf/: Makefile.am  ewf_checksum.h  ewf_data.h  ewf_definitions.h  ewf_digest.h  ewf_error2.h  ewf_file_header.h  (+83 more)
msvscpp/: Makefile.am  libewf.sln
msvscpp/dokan/: dokan.vcproj
msvscpp/ewf.net/: ewf.net.vcproj
msvscpp/ewf_test_bit_stream/: ewf_test_bit_stream.vcproj
msvscpp/ewf_test_checksum/: ewf_test_checksum.vcproj
msvscpp/ewf_test_chunk_data/: ewf_test_chunk_data.vcproj
msvscpp/ewf_test_chunk_table/: ewf_test_chunk_table.vcproj
msvscpp/ewf_test_compression/: ewf_test_compression.vcproj
msvscpp/ewf_test_date_time/: ewf_test_date_time.vcproj
msvscpp/ewf_test_date_time_values/: ewf_test_date_time_values.vcproj
msvscpp/ewf_test_deflate/: ewf_test_deflate.vcproj
msvscpp/ewf_test_empty_block/: ewf_test_empty_block.vcproj
msvscpp/ewf_test_error/: ewf_test_error.vcproj
msvscpp/ewf_test_file_entry/: ewf_test_file_entry.vcproj
msvscpp/ewf_test_filename/: ewf_test_filename.vcproj
msvscpp/ewf_test_glob/: ewf_test_glob.vcproj
msvscpp/ewf_test_handle/: ewf_test_handle.vcproj
msvscpp/ewf_test_hash_sections/: ewf_test_hash_sections.vcproj
msvscpp/ewf_test_hash_values/: ewf_test_hash_values.vcproj
msvscpp/ewf_test_huffman_tree/: ewf_test_huffman_tree.vcproj
msvscpp/ewf_test_io_handle/: ewf_test_io_handle.vcproj
msvscpp/ewf_test_media_values/: ewf_test_media_values.vcproj
msvscpp/ewf_test_notify/: ewf_test_notify.vcproj
msvscpp/ewf_test_read/: ewf_test_read.vcproj
msvscpp/ewf_test_read_io_handle/: ewf_test_read_io_handle.vcproj
msvscpp/ewf_test_read_write/: ewf_test_read_write.vcproj
msvscpp/ewf_test_read_write_delta/: ewf_test_read_write_delta.vcproj
msvscpp/ewf_test_sector_range/: ewf_test_sector_range.vcproj
msvscpp/ewf_test_seek/: ewf_test_seek.vcproj
msvscpp/ewf_test_segment_table/: ewf_test_segment_table.vcproj
msvscpp/ewf_test_single_files/: ewf_test_single_files.vcproj
msvscpp/ewf_test_support/: ewf_test_support.vcproj
msvscpp/ewf_test_truncate/: ewf_test_truncate.vcproj
msvscpp/ewf_test_write/: ewf_test_write.vcproj
msvscpp/ewf_test_write_chunk/: ewf_test_write_chunk.vcproj
msvscpp/ewf_test_write_io_handle/: ewf_test_write_io_handle.vcproj
msvscpp/ewfacquire/: ewfacquire.vcproj
msvscpp/ewfacquirestream/: ewfacquirestream.vcproj
msvscpp/ewfacquirestream-mt/: ewfacquirestream-mt.vcproj
msvscpp/ewfdebug/: ewfdebug.vcproj
msvscpp/ewfexport/: ewfexport.vcproj
msvscpp/ewfinfo/: ewfinfo.vcproj
msvscpp/ewfmount/: ewfmount.vcproj
msvscpp/ewfrecover/: ewfrecover.vcproj
msvscpp/ewfverify/: ewfverify.vcproj
msvscpp/libbfio/: libbfio.vcproj
msvscpp/libcaes/: libcaes.vcproj
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcdatetime/: libcdatetime.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcfile/: libcfile.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcpath/: libcpath.vcproj
msvscpp/libcsplit/: libcsplit.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/libcsystem/: libcsystem.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libewf/: libewf.vcproj
msvscpp/libewf_dll/: libewf_dll.vcproj
msvscpp/libfcache/: libfcache.vcproj
msvscpp/libfdata/: libfdata.vcproj
msvscpp/libfguid/: libfguid.vcproj
msvscpp/libfvalue/: libfvalue.vcproj
msvscpp/libhmac/: libhmac.vcproj
msvscpp/libmfdata/: libmfdata.vcproj
msvscpp/libodraw/: libodraw.vcproj
msvscpp/libsmdev/: libsmdev.vcproj
msvscpp/libsmraw/: libsmraw.vcproj
msvscpp/libuna/: libuna.vcproj
msvscpp/pyewf/: pyewf.vcproj
msvscpp/zlib/: zlib.vcproj
tests/: Makefile.am  ewf_test_chunk_data.c  ewf_test_chunk_table.c  ewf_test_compression.c  ewf_test_date_time.c  ewf_test_date_time_values.c  ewf_test_definitions.h  ewf_test_empty_block.c  ewf_test_file_entry.c  ewf_test_filename.c  ewf_test_handle.c  ewf_test_hash_values.c  ewf_test_libcsystem.h  ewf_test_media_values.c  ewf_test_read.c  ewf_test_read_write.c  ewf_test_read_write_delta.c  ewf_test_seek.c  ewf_test_segment_table.c  ewf_test_single_files.c  ewf_test_support.c  ewf_test_truncate.c  ewf_test_write.c  ewf_test_write_chunk.c  ewf_test_write_io_handle.c  input_error  input_more  input_optical  pyewf_test_support.py  runtests.py  syncsharedlibs.sh  test_ewfacquire.sh  test_ewfacquire_optical.sh  test_ewfacquire_resume.sh  test_ewfacquirestream.sh  test_ewfexport.sh  test_ewfexport_logical.sh  test_ewfinfo.ps1  test_ewfinfo.sh  test_ewfverify.sh  (+18 more)
(+75 files in other folders)
